<resources>
    <string name="app_name">SARAM</string>
    <string name="title_activity_inicio">inicioActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- NOMBRES DE LA SECCIÓN DEL MENÚ DESPLEGABLE -->
    <string name="menu_home">Inicio</string>
    <string name="menu_contactos">Contactos</string>
    <string name="menu_info">Información</string>
    <string name="menu_PPrivacidad">Políticas de Privacidad</string>
    <string name="menu_ubicacion">Ubicación</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Mapa SARAM</string>
    <!-- TODO: Remove or change this placeholder text
    <string name="hello_blank_fragment">Hello blank fragment</string> -->
</resources>
