<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/navegador"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_contactos"
            android:icon="@drawable/equipo"
            android:title="@string/menu_contactos" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/paper"
            android:title="@string/menu_info" />
        <item
            android:id="@+id/nav_pprivacidad"
            android:icon="@drawable/proteger"
            android:title="@string/menu_PPrivacidad" />
        <item
            android:id="@+id/nav_ubicacion"
            android:icon="@drawable/gps"
            android:title="@string/menu_ubicacion" />

        <!-- SECCIÓN DE CONFIGURACIÓN -->
        <item
            android:id="@+id/seccion_close"
            android:title="">
            <menu>
                <item
                    android:id="@+id/nav_cerrarS"
                    android:icon="@drawable/cerrarsesion"
                    android:title="Cerrar Sesión" />
            </menu>
        </item>

    </group>
</menu>